--- a/client/src/styles/pages/components/IncomeStatementEditor.scss
+++ b/client/src/styles/pages/components/IncomeStatementEditor.scss
@@ -168,6 +168,7 @@
     display: inline-flex;
     flex-direction: column;
     text-align: left;
+    justify-content: stretch;
   }
 
 
@@ -185,7 +186,7 @@
     border-left: 0;
     border-top: 0;
     border-bottom: 0;
-    height: 50%;
+    height: 100%;
     padding-top: 0.5vh;
     padding-bottom: 0.5vh;
     padding-left: 0.5vw;
