--- a/client/src/styles/pages/components/TagEditor.scss
+++ b/client/src/styles/pages/components/TagEditor.scss
@@ -11,6 +11,11 @@
     cursor: pointer;
   }
 
+  .tag-editor__value-container
+  {
+    padding-left: 12px;
+  }
+
 
   .tag-editor-option:hover
   {
