--- a/client/src/styles/pages/components/ZoneSelector.scss
+++ b/client/src/styles/pages/components/ZoneSelector.scss
@@ -2,6 +2,12 @@
 
 .zone-selector
 {
+
+  .zone-selector__value-container
+  {
+    padding-left: 12px;
+  }
+
   .zone-selector__control
   {
 
